apps/base/servarr/prowlarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: prowlarr
    namespace: servarr
spec:
    selector:
        matchLabels:
            app: prowlarr
    template:
        metadata:
            labels:
                app: prowlarr
        spec:
            securityContext:
                fsGroup: 1000
                seccompProfile:
                    type: RuntimeDefault

            containers:
                - name: prowlarr
                  image: ghcr.io/11notes/prowlarr:2.6
                  imagePullPolicy: Always
                  securityContext:
                      runAsUser: 1000
                      runAsGroup: 1000
                      runAsNonRoot: true
                      readOnlyRootFilesystem: true
                      allowPrivilegeEscalation: false
                      capabilities:
                          drop: ["ALL"]
                  livenessProbe:
                      tcpSocket:
                          port: 9696
                      initialDelaySeconds: 0
                      failureThreshold: 3
                      timeoutSeconds: 1
                      periodSeconds: 10
                  readinessProbe:
                      tcpSocket:
                          port: 9696
                      initialDelaySeconds: 0
                      failureThreshold: 3
                      timeoutSeconds: 1
                      periodSeconds: 10
                  startupProbe:
                      tcpSocket:
                          port: 9696
                      initialDelaySeconds: 0
                      failureThreshold: 30
                      timeoutSeconds: 1
                      periodSeconds: 5
                  resources:
                      limits:
                          cpu: "0.5"
                          memory: "512Mi"
                      requests:
                          cpu: "0.25"
                          memory: "256Mi"
                  ports:
                      - name: webui
                        containerPort: 9696
                        protocol: TCP
                  volumeMounts:
                      - name: tmp
                        mountPath: "/tmp"

            volumes:
                - name: tmp
                  emptyDir: {}
