apps/base/servarr/prowlarr/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: prowlarr
    namespace: servarr
spec:
    type: ClusterIP
    selector:
        app: prowlarr
    ports:
        - name: webui
          port: 9696
          protocol: TCP
