apps/base/servarr/prowlarr/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
    name: prowlarr-ingress
    namespace: servarr
spec:
    entryPoints:
        - websecure
    routes:
        - match: Host(`srv.guibi.dev`) && PathPrefix(`/prowlarr`)
          kind: Rule
          middlewares:
              - name: prowlarr-oidc-auth
                namespace: servarr
          services:
              - name: prowlarr
                namespace: servarr
                port: 9696
                scheme: http
    tls:
        secretName: tls-certificate

---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
    name: prowlarr-oidc-auth
    namespace: servarr
spec:
    plugin:
        traefikoidc:
            providerURL: https://auth.guibi.dev
            scopes: groups
            clientID: bf229943-0aa8-4a61-baa5-d229413c772d
            clientSecret: urn:k8s:secret:oidc-auth:CLIENT_SECRET
            sessionEncryptionKey: urn:k8s:secret:oidc-auth:SESSION_KEY
            callbackURL: /prowlarr/oauth/callback
            logoutURL: /prowlarr/oauth/logout
            postLogoutRedirectURI: /prowlarr
            allowedRolesAndGroups: [admin]
